# claude-quota-widget

./: .gitignore  CLAUDE.md  README.md  index.html  main.js  package.json  preload.js  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml  build.yml
landing/: styles.css
src/: App.svelte  app.css  index.html  renderer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  quota.rs  settings.rs  tray.rs  tray_meter.rs  watcher.rs  window.rs
src/components/: AccountCard.svelte  AccountSettingsRow.svelte  AddAccountForm.svelte  Dashboard.svelte  EmptyState.svelte  Footer.svelte  Header.svelte  LanguageSelect.svelte  Settings.svelte
src/lib/: api.ts  i18n.ts  quota.ts  stores.ts
src/lib/locales/: en.ts  ja.ts
